--- a/resources/views/pages/contact.antlers.html
+++ b/resources/views/pages/contact.antlers.html
@@ -6,7 +6,7 @@
 <img id="hero-tri" class="absolute -top-10 left-[-7.5rem]" src="/assets/imgs/quarter-jagged.svg" alt="">
 {{ /if }}
 
-<div class="bg-lime relative h-screen text-dark overflow-hidden">
+<div class="bg-gradient-to-r from-dark-lime to-lime relative h-screen text-dark overflow-hidden">
     <div class="grid grid-cols-2 pt-56 ">
         <div class="z-100 pt-8 px-24">
             <div class="contact-heading tracking-wider z-100 pt-8">{{contact_heading}}</div>
