--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -462,7 +462,9 @@ Ensure the default browser behavior of the `hidden` attribute.
     src: url("/fonts/Rota-Bold.otf") format("opentype");
 }
 
-[x-cloak] { display: none !important; }
+[x-cloak] {
+    display: none !important;
+}
 
 .block-heading, .footer-heading, .contact-heading, .alt-block-heading {
   font-family: cir-bold;
@@ -478,7 +480,7 @@ Ensure the default browser behavior of the `hidden` attribute.
     margin-top: 5px;
     margin-bottom: 10px;
     background: #03FC96;
-    background: linear-gradient(270deg, #03FC96, #0FBAA9, #0BE3A0,  #03FC96);
+    background: linear-gradient(270deg, #03FC96, #0FBAA9, #0BE3A0, #03FC96);
     background-size: 200%;
     -webkit-animation: move-background 3s linear infinite;
             animation: move-background 3s linear infinite;
@@ -492,7 +494,7 @@ Ensure the default browser behavior of the `hidden` attribute.
     margin-top: 5px;
     margin-bottom: 10px;
     background: #03FC96;
-    background: linear-gradient(270deg, #03FC96, #fff, #fff,  #03FC96);
+    background: linear-gradient(270deg, #03FC96, #fff, #fff, #03FC96);
     background-size: 200%;
     -webkit-animation: move-background 3s linear infinite;
             animation: move-background 3s linear infinite;
@@ -686,6 +688,77 @@ Ensure the default browser behavior of the `hidden` attribute.
     }
 }
 
+.dot {
+  margin-left: 0px;
+  margin-right: 0.5rem;
+  height: 1rem;
+  width: 1rem;
+  cursor: pointer;
+  border-radius: 9999px;
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.dot-active {
+  cursor: not-allowed;
+  --tw-bg-opacity: 1;
+  background-color: rgb(3 252 150 / var(--tw-bg-opacity));
+}
+
+@-webkit-keyframes slideOutLeft {
+    from {
+        transform: translateX(0);
+    }
+    to {
+        transform: translateX(-100%);
+
+    }
+}
+
+@keyframes slideOutLeft {
+    from {
+        transform: translateX(0);
+    }
+    to {
+        transform: translateX(-100%);
+
+    }
+}
+
+@-webkit-keyframes slideInLeft {
+    from {
+        transform: translateX(100%);
+    }
+    to {
+        transform: translateX(0);
+
+    }
+}
+
+@keyframes slideInLeft {
+    from {
+        transform: translateX(100%);
+    }
+    to {
+        transform: translateX(0);
+
+    }
+}
+
+cell {
+    transition: 2s;
+}
+
+.slideOutLeft {
+    -webkit-animation: slideOutLeft 2s forwards;
+            animation: slideOutLeft 2s forwards;
+}
+
+.slideInLeft {
+    -webkit-animation: slideInLeft 2s forwards;
+            animation: slideInLeft 2s forwards;
+}
+
 .debug-screens::before {
   position: fixed;
   z-index: 2147483647;
@@ -820,8 +893,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   top: 25%;
 }
 
-.right-1\/3 {
-  right: 33.333333%;
+.bottom-10 {
+  bottom: 2.5rem;
 }
 
 .top-navbar {
@@ -867,6 +940,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .block {
   display: block;
+}
+
+.inline-block {
+  display: inline-block;
 }
 
 .inline {
@@ -929,8 +1006,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 4rem;
 }
 
+.w-screen {
+  width: 100vw;
+}
+
 .max-w-full {
   max-width: 100%;
+}
+
+.flex-grow {
+  flex-grow: 1;
 }
 
 .translate-x-\[-4\.8rem\] {
@@ -948,18 +1033,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.translate-x-3 {
-  --tw-translate-x: 0.75rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-x-3 {
-  --tw-translate-x: -0.75rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-x-full {
-  --tw-translate-x: -100%;
+.translate-x-12 {
+  --tw-translate-x: 3rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -970,31 +1045,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .translate-x-full {
   --tw-translate-x: 100%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-y-\[103px\] {
-  --tw-translate-y: 103px;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-y-navbar {
-  --tw-translate-y: 103px;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-x-1\/2 {
-  --tw-translate-x: 50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-x-12 {
-  --tw-translate-x: 3rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-y-\[108px\] {
-  --tw-translate-y: 108px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1119,11 +1169,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-radius: 9999px;
 }
 
-.rounded-b-full {
-  border-bottom-right-radius: 9999px;
-  border-bottom-left-radius: 9999px;
-}
-
 .rounded-bl-full {
   border-bottom-left-radius: 9999px;
 }
@@ -1160,11 +1205,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-color: rgb(15 186 169 / var(--tw-bg-opacity));
 }
 
-.bg-lime {
-  --tw-bg-opacity: 1;
-  background-color: rgb(3 252 150 / var(--tw-bg-opacity));
-}
-
 .bg-green-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(134 239 172 / var(--tw-bg-opacity));
@@ -1173,6 +1213,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .bg-red-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(252 165 165 / var(--tw-bg-opacity));
+}
+
+.bg-lime {
+  --tw-bg-opacity: 1;
+  background-color: rgb(3 252 150 / var(--tw-bg-opacity));
 }
 
 .bg-black {
@@ -1201,12 +1246,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-gradient-stops: var(--tw-gradient-from), #03FC96, var(--tw-gradient-to, rgb(3 252 150 / 0));
 }
 
-.to-dark-lime {
-  --tw-gradient-to: #0FBAA9;
-}
-
 .to-lime {
   --tw-gradient-to: #03FC96;
+}
+
+.to-dark-lime {
+  --tw-gradient-to: #0FBAA9;
 }
 
 .bg-clip-text {
@@ -1323,14 +1368,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .pl-3 {
   padding-left: 0.75rem;
-}
-
-.pt-6 {
-  padding-top: 1.5rem;
-}
-
-.pb-36 {
-  padding-bottom: 9rem;
 }
 
 .align-middle {
@@ -1529,10 +1566,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .md\:w-\[32rem\] {
     width: 32rem;
-  }
-
-  .md\:w-1\/2 {
-    width: 50%;
   }
 
   .md\:w-1\/4 {
