--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -35,7 +35,9 @@
     src: url("/fonts/Rota-Bold.otf") format("opentype");
 }
 
-[x-cloak] { display: none !important; }
+[x-cloak] {
+    display: none !important;
+}
 
 .block-heading, .footer-heading, .contact-heading, .alt-block-heading {
     @apply text-4xl font-cir-bold;
@@ -49,7 +51,7 @@
     margin-top: 5px;
     margin-bottom: 10px;
     background: theme('colors.lime');
-    background: linear-gradient(270deg, theme('colors.lime'), theme('colors.dark-lime'), theme('colors.alt-lime'),  theme('colors.lime'));
+    background: linear-gradient(270deg, theme('colors.lime'), theme('colors.dark-lime'), theme('colors.alt-lime'), theme('colors.lime'));
     background-size: 200%;
     animation: move-background 3s linear infinite;
 }
@@ -62,7 +64,7 @@
     margin-top: 5px;
     margin-bottom: 10px;
     background: theme('colors.lime');
-    background: linear-gradient(270deg, theme('colors.lime'), theme('colors.white'), theme('colors.white'),  theme('colors.lime'));
+    background: linear-gradient(270deg, theme('colors.lime'), theme('colors.white'), theme('colors.white'), theme('colors.lime'));
     background-size: 200%;
     animation: move-background 3s linear infinite;
 }
@@ -169,3 +171,44 @@
         transform-origin: left;
     }
 }
+
+.dot {
+    @apply w-4 h-4 ml-0 mr-2 bg-white rounded-full cursor-pointer;
+}
+
+.dot-active {
+    @apply bg-lime cursor-not-allowed;
+}
+
+@keyframes slideOutLeft {
+    from {
+        transform: translateX(0);
+    }
+    to {
+        transform: translateX(-100%);
+
+    }
+}
+
+@keyframes slideInLeft {
+    from {
+        transform: translateX(100%);
+    }
+    to {
+        transform: translateX(0);
+
+    }
+}
+
+cell {
+    transition: 2s;
+}
+
+.slideOutLeft {
+    animation: slideOutLeft 2s forwards;
+}
+
+.slideInLeft {
+    animation: slideInLeft 2s forwards;
+}
+
