--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -425,6 +425,193 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-backdrop-sepia:  ;
 }
 
+/*! Flickity v3.0.0
+https://flickity.metafizzy.co
+---------------------------------------------- */
+
+.flickity-enabled {
+  position: relative;
+}
+
+.flickity-enabled:focus { outline: none; }
+
+.flickity-viewport {
+  overflow: hidden;
+  position: relative;
+  height: 100%;
+  touch-action: pan-y;
+}
+
+.flickity-slider {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+}
+
+.flickity-rtl .flickity-slider {
+  left: unset;
+  right: 0;
+}
+
+/* draggable */
+
+.flickity-enabled.is-draggable {
+  -webkit-tap-highlight-color: transparent;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.flickity-enabled.is-draggable .flickity-viewport {
+  cursor: move;
+  cursor: -webkit-grab;
+  cursor: grab;
+}
+
+.flickity-enabled.is-draggable .flickity-viewport.is-pointer-down {
+  cursor: -webkit-grabbing;
+  cursor: grabbing;
+}
+
+/* ---- flickity-cell ---- */
+
+.flickity-cell {
+  position: absolute;
+  left: 0;
+}
+
+.flickity-rtl .flickity-cell {
+  left: unset;
+  right: 0;
+}
+
+/* ---- flickity-button ---- */
+
+.flickity-button {
+  position: absolute;
+  background: hsl(0 0% 100% / 75%);
+  border: none;
+  color: #333;
+}
+
+.flickity-button:hover {
+  background: white;
+  cursor: pointer;
+}
+
+.flickity-button:focus {
+  outline: none;
+  box-shadow: 0 0 0 5px #19F;
+}
+
+.flickity-button:active {
+  opacity: 0.6;
+}
+
+.flickity-button:disabled {
+  opacity: 0.3;
+  cursor: auto;
+  /* prevent disabled button from capturing pointer up event. #716 */
+  pointer-events: none;
+}
+
+.flickity-button-icon {
+  fill: currentColor;
+}
+
+/* ---- previous/next buttons ---- */
+
+.flickity-prev-next-button {
+  top: 50%;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  /* vertically center */
+  transform: translateY(-50%);
+}
+
+.flickity-prev-next-button.previous { left: 10px; }
+
+.flickity-prev-next-button.next { right: 10px; }
+
+/* right to left */
+
+.flickity-rtl .flickity-prev-next-button.previous {
+  left: auto;
+  right: 10px;
+}
+
+.flickity-rtl .flickity-prev-next-button.next {
+  right: auto;
+  left: 10px;
+}
+
+.flickity-prev-next-button .flickity-button-icon {
+  position: absolute;
+  left: 20%;
+  top: 20%;
+  width: 60%;
+  height: 60%;
+}
+
+/* ---- page dots ---- */
+
+.flickity-page-dots {
+  position: absolute;
+  width: 100%;
+  bottom: -25px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.flickity-rtl .flickity-page-dots { direction: rtl; }
+
+.flickity-page-dot {
+  display: block;
+  width: 10px;
+  height: 10px;
+  padding: 0;
+  margin: 0 8px;
+  background: hsl(0 0% 20% / 25%);
+  border-radius: 50%;
+  cursor: pointer;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  border: none;
+  text-indent: -9999px;
+  overflow: hidden;
+}
+
+.flickity-rtl .flickity-page-dot {
+  text-indent: 9999px;
+}
+
+.flickity-page-dot:focus {
+  outline: none;
+  box-shadow: 0 0 0 5px #19F;
+}
+
+.flickity-page-dot.is-selected {
+  background: hsl(0 0% 20% / 100%);
+}
+
+/* flickity-fade */
+
+.flickity-enabled.is-fade .flickity-slider > * {
+  pointer-events: none;
+  z-index: 0;
+}
+
+.flickity-enabled.is-fade .flickity-slider > .is-selected {
+  pointer-events: auto;
+  z-index: 1;
+}
+
 /* This is all you. */
 
 @font-face {
@@ -688,75 +875,40 @@ Ensure the default browser behavior of the `hidden` attribute.
     }
 }
 
-.dot {
-  margin-left: 0px;
-  margin-right: 0.5rem;
-  height: 1rem;
-  width: 1rem;
-  cursor: pointer;
-  border-radius: 9999px;
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+.carousel-cell {
+    opacity: 0;
+    transition: opacity 1.5s ease-in-out;
+    z-index: 0;
+    width: 100vw;
+    height: 100%;
 }
 
-.dot-active {
-  cursor: not-allowed;
-  --tw-bg-opacity: 1;
-  background-color: rgb(3 252 150 / var(--tw-bg-opacity));
+/* position dots in carousel */
+
+.flickity-page-dots {
+    bottom: 55px!important;
+
 }
 
-@-webkit-keyframes slideOutLeft {
-    from {
-        transform: translateX(0);
-    }
-    to {
-        transform: translateX(-100%);
+/* white circles */
 
-    }
+.flickity-page-dot {
+    width: 16px;
+    height: 16px;
+    opacity: 1;
+    background: white;
+    /*border: 2px solid white;*/
 }
 
-@keyframes slideOutLeft {
-    from {
-        transform: translateX(0);
-    }
-    to {
-        transform: translateX(-100%);
+/* fill-in selected dot */
 
-    }
+.flickity-page-dot.is-selected {
+    background: hsl(155.4, 97.6%, 50%);
 }
 
-@-webkit-keyframes slideInLeft {
-    from {
-        transform: translateX(100%);
-    }
-    to {
-        transform: translateX(0);
-
-    }
-}
-
-@keyframes slideInLeft {
-    from {
-        transform: translateX(100%);
-    }
-    to {
-        transform: translateX(0);
-
-    }
-}
-
-cell {
-    transition: 2s;
-}
-
-.slideOutLeft {
-    -webkit-animation: slideOutLeft 2s forwards;
-            animation: slideOutLeft 2s forwards;
-}
-
-.slideInLeft {
-    -webkit-animation: slideInLeft 2s forwards;
-            animation: slideInLeft 2s forwards;
+.flickity-page-dot:focus {
+    outline: none;
+    box-shadow: 0 0 0 0 #19F;
 }
 
 .debug-screens::before {
@@ -893,10 +1045,6 @@ cell {
   top: 25%;
 }
 
-.bottom-10 {
-  bottom: 2.5rem;
-}
-
 .top-navbar {
   top: 103px;
 }
@@ -940,10 +1088,6 @@ cell {
 
 .block {
   display: block;
-}
-
-.inline-block {
-  display: inline-block;
 }
 
 .inline {
@@ -1006,16 +1150,8 @@ cell {
   width: 4rem;
 }
 
-.w-screen {
-  width: 100vw;
-}
-
 .max-w-full {
   max-width: 100%;
-}
-
-.flex-grow {
-  flex-grow: 1;
 }
 
 .translate-x-\[-4\.8rem\] {
@@ -1040,11 +1176,6 @@ cell {
 
 .translate-x-0 {
   --tw-translate-x: 0px;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-x-full {
-  --tw-translate-x: 100%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1946,4 +2077,5 @@ cell {
     padding-left: 14rem;
   }
 }
+
 
