--- a/resources/css/tailwind.css
+++ b/resources/css/tailwind.css
@@ -1,7 +1,12 @@
 @import "tailwindcss/base";
 
+@import "flickity/css/flickity";
+
+@import "flickity-fade/flickity-fade";
+
 @import "site";
 
 @import "tailwindcss/components";
 
 @import "tailwindcss/utilities";
+
