--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -614,41 +614,6 @@ https://flickity.metafizzy.co
 
 /* This is all you. */
 
-@font-face {
-    font-family: "be-extra-bold";
-    src: url("/fonts/BeVietnam-ExtraBold.ttf") format("truetype");
-}
-
-@font-face {
-    font-family: "be-semi-bold";
-    src: url("/fonts/BeVietnam-SemiBold.ttf") format("truetype");
-}
-
-@font-face {
-    font-family: "cir-bold";
-    src: url("/fonts/CircularStd-Bold.otf") format("opentype");
-}
-
-@font-face {
-    font-family: "cir-book";
-    src: url("/fonts/CircularStd-Book.otf") format("opentype");
-}
-
-@font-face {
-    font-family: "cir-medium";
-    src: url("/fonts/CircularStd-Medium.otf") format("opentype");
-}
-
-@font-face {
-    font-family: "gotham";
-    src: url("/fonts/Gotham-Ultra.otf") format("opentype");
-}
-
-@font-face {
-    font-family: "rota";
-    src: url("/fonts/Rota-Bold.otf") format("opentype");
-}
-
 [x-cloak] {
     display: none !important;
 }
@@ -724,24 +689,6 @@ https://flickity.metafizzy.co
 
 .block-content > ul > br {
     display: none;
-}
-
-.nav-menu {
-    z-index: 99;
-    position: absolute;
-    top: 103px;
-    right: -50%;
-    height: 48rem;
-    width: 48rem;
-    overflow: hidden;
-    transition: 2s;
-    opacity: 0;
-}
-
-.open {
-    opacity: 1;
-    right: 0;
-
 }
 
 #topCornerImage {
@@ -873,42 +820,6 @@ https://flickity.metafizzy.co
     to {
         transform-origin: left;
     }
-}
-
-.carousel-cell {
-    opacity: 0;
-    transition: opacity 1.5s ease-in-out;
-    z-index: 0;
-    width: 100vw;
-    height: 100%;
-}
-
-/* position dots in carousel */
-
-.flickity-page-dots {
-    bottom: 55px!important;
-
-}
-
-/* white circles */
-
-.flickity-page-dot {
-    width: 16px;
-    height: 16px;
-    opacity: 1;
-    background: white;
-    /*border: 2px solid white;*/
-}
-
-/* fill-in selected dot */
-
-.flickity-page-dot.is-selected {
-    background: hsl(155.4, 97.6%, 50%);
-}
-
-.flickity-page-dot:focus {
-    outline: none;
-    box-shadow: 0 0 0 0 #19F;
 }
 
 .debug-screens::before {
@@ -1150,6 +1061,18 @@ https://flickity.metafizzy.co
   width: 4rem;
 }
 
+.w-24 {
+  width: 6rem;
+}
+
+.w-48 {
+  width: 12rem;
+}
+
+.w-40 {
+  width: 10rem;
+}
+
 .max-w-full {
   max-width: 100%;
 }
@@ -1166,6 +1089,16 @@ https://flickity.metafizzy.co
 
 .translate-y-\[11\.5rem\] {
   --tw-translate-y: 11.5rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-y-\[-9rem\] {
+  --tw-translate-y: -9rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-x-\[9\.8rem\] {
+  --tw-translate-x: 9.8rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1238,6 +1171,10 @@ https://flickity.metafizzy.co
 
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.flex-row {
+  flex-direction: row;
 }
 
 .flex-col {
@@ -1421,9 +1358,9 @@ https://flickity.metafizzy.co
   padding-bottom: 2.5rem;
 }
 
-.px-24 {
-  padding-left: 6rem;
-  padding-right: 6rem;
+.px-16 {
+  padding-left: 4rem;
+  padding-right: 4rem;
 }
 
 .px-48 {
@@ -1441,11 +1378,6 @@ https://flickity.metafizzy.co
   padding-bottom: 0.5rem;
 }
 
-.px-16 {
-  padding-left: 4rem;
-  padding-right: 4rem;
-}
-
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
@@ -1461,6 +1393,11 @@ https://flickity.metafizzy.co
   padding-bottom: 3rem;
 }
 
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
 .pb-4 {
   padding-bottom: 1rem;
 }
@@ -1469,20 +1406,16 @@ https://flickity.metafizzy.co
   padding-top: 2.5rem;
 }
 
-.pt-56 {
-  padding-top: 14rem;
-}
-
-.pt-8 {
-  padding-top: 2rem;
+.pt-12 {
+  padding-top: 3rem;
 }
 
 .pt-4 {
   padding-top: 1rem;
 }
 
-.pt-12 {
-  padding-top: 3rem;
+.pt-8 {
+  padding-top: 2rem;
 }
 
 .pb-24 {
@@ -1499,6 +1432,18 @@ https://flickity.metafizzy.co
 
 .pl-3 {
   padding-left: 0.75rem;
+}
+
+.pt-24 {
+  padding-top: 6rem;
+}
+
+.pl-4 {
+  padding-left: 1rem;
+}
+
+.pl-8 {
+  padding-left: 2rem;
 }
 
 .align-middle {
@@ -1641,6 +1586,94 @@ https://flickity.metafizzy.co
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 
+@font-face {
+    font-family: "be-extra-bold";
+    src: url("/fonts/BeVietnam-ExtraBold.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: "be-semi-bold";
+    src: url("/fonts/BeVietnam-SemiBold.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: "cir-bold";
+    src: url("/fonts/CircularStd-Bold.otf") format("opentype");
+}
+
+@font-face {
+    font-family: "cir-book";
+    src: url("/fonts/CircularStd-Book.otf") format("opentype");
+}
+
+@font-face {
+    font-family: "cir-medium";
+    src: url("/fonts/CircularStd-Medium.otf") format("opentype");
+}
+
+@font-face {
+    font-family: "gotham";
+    src: url("/fonts/Gotham-Ultra.otf") format("opentype");
+}
+
+@font-face {
+    font-family: "rota";
+    src: url("/fonts/Rota-Bold.otf") format("opentype");
+}
+
+.carousel-cell {
+    opacity: 0;
+    transition: opacity 1.5s ease-in-out;
+    z-index: 0;
+    width: 100vw;
+    height: 100%;
+}
+
+/* position dots in carousel */
+
+.flickity-page-dots {
+    bottom: 55px!important;
+
+}
+
+/* white circles */
+
+.flickity-page-dot {
+    width: 16px;
+    height: 16px;
+    opacity: 1;
+    background: white;
+    /*border: 2px solid white;*/
+}
+
+/* fill-in selected dot */
+
+.flickity-page-dot.is-selected {
+    background: hsl(155.4, 97.6%, 50%);
+}
+
+.flickity-page-dot:focus {
+    outline: none;
+    box-shadow: 0 0 0 0 #19F;
+}
+
+.nav-menu {
+    z-index: 1000;
+    position: absolute;
+    top: 103px;
+    right: -50%;
+    height: 48rem;
+    width: 48rem;
+    overflow: hidden;
+    transition: 2s;
+    opacity: 0;
+}
+
+.open {
+    opacity: 1;
+    right: 0;
+}
+
 .hover\:-translate-y-2:hover {
   --tw-translate-y: -0.5rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1693,6 +1726,10 @@ https://flickity.metafizzy.co
 
   .md\:block {
     display: block;
+  }
+
+  .md\:grid {
+    display: grid;
   }
 
   .md\:w-\[32rem\] {
@@ -1757,6 +1794,19 @@ https://flickity.metafizzy.co
     --tw-space-y-reverse: 0;
     margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
     margin-bottom: calc(0px * var(--tw-space-y-reverse));
+  }
+
+  .md\:px-48 {
+    padding-left: 12rem;
+    padding-right: 12rem;
+  }
+
+  .md\:pt-56 {
+    padding-top: 14rem;
+  }
+
+  .md\:pt-8 {
+    padding-top: 2rem;
   }
 }
 
@@ -1851,6 +1901,10 @@ https://flickity.metafizzy.co
 
   .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .lg\:flex-row {
@@ -2077,5 +2131,4 @@ https://flickity.metafizzy.co
     padding-left: 14rem;
   }
 }
-
 
