--- a/resources/views/pages/contact.antlers.html
+++ b/resources/views/pages/contact.antlers.html
@@ -7,14 +7,14 @@
 {{ /if }}
 
 <div class="bg-gradient-to-r from-dark-lime to-lime relative h-screen text-dark overflow-hidden">
-    <div class="grid grid-cols-1 md:grid-cols-2 pt-12 md:pt-56 ">
-        <div class="z-100 pt-4 md:pt-8  px-16">
+    <div class="grid grid-cols-1 lg:grid-cols-2 pt-12">
+        <div class="z-100 pt-4  sm:pt-16 px-16 sm:px-24 xl:px-16 2xl:pl-24">
             <div class="contact-heading tracking-wider z-100 ">{{contact_heading}}</div>
-            <div class="block-content z-100 pt-24 pl-8">{{contact_content}}</div>
+            <div class="block-content z-100 pt-24 pl-8 sm:pl-0 sm:pt-4">{{contact_content}}</div>
         </div>
-            <img class="hidden absolute z-10 bottom-[-12rem] left-[11.5rem]  " src="/assets/imgs/contact_black.svg" alt="">
-            <img class="absolute z-10 top-[10rem] left-[-15rem] transform-gpu translate-y-[-9rem] translate-x-[9.8rem]" src="/assets/imgs/contact_white.svg" alt="">
-        <div class="p-24 px-6 md:px-48">
+            <img class="hidden lg:block absolute z-10 bottom-[-12rem] left-[11.5rem] lg:h-[67%] lg:bottom-[-1rem] lg:left-[5.5rem] " src="/assets/imgs/contact_black.svg" alt="">
+            <img class="absolute z-10 top-[10rem] left-[-15rem] transform-gpu translate-y-[-9rem] translate-x-[9.8rem] md:translate-x-[5rem] lg:translate-y-[-10rem] lg:translate-x-0 lg:w-[90%] xl:w-[80%] 2xl:w-[60%]" src="/assets/imgs/contact_white.svg" alt="">
+        <div class="p-24 px-6 sm:pt-48 md:pt-72 lg:pt-96 2xl:w-10/12">
             {{ form:contact }}
 
 
