--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -10,11 +10,12 @@
     <body class="bg-white leading-normal font-be-semi-bold w-full relative max-w-full overflow-x-hidden
     @env(['local','staging'] )
 debug-screens
-@endenv">
-    {{partial:layouts/navigation/_main_nav}}
-    <div class="">
+@endenv" data-barba="wrapper">
+
+    <main data-barba="container" data-barba-namespace="home" class="" >
+        {{partial:layouts/navigation/_main_nav}}
         {{ template_content }}
-    </div>
+    </main>
     {{partial:layouts/footer/_main_footer}}
         <script src="{{ mix src='/js/site.js' }}"></script>
     </body>
