--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -787,13 +787,13 @@ https://flickity.metafizzy.co
   }
 }
 
-@media (min-width: 1536px) {
+@media (min-width: 1920px) {
 
   .panel-size {
     padding-left: 12rem;
     padding-right: 12rem;
-    padding-top: 6rem;
-    padding-bottom: 6rem;
+    padding-top: 4.5rem;
+    padding-bottom: 4.5rem;
   }
 }
 
@@ -824,12 +824,25 @@ https://flickity.metafizzy.co
 
 .container {
   width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+  padding-right: 1rem;
+  padding-left: 1rem;
+}
+
+@media (min-width: 100%) {
+
+  .container {
+    max-width: 100%;
+  }
 }
 
 @media (min-width: 640px) {
 
   .container {
     max-width: 640px;
+    padding-right: 2rem;
+    padding-left: 2rem;
   }
 }
 
@@ -844,6 +857,8 @@ https://flickity.metafizzy.co
 
   .container {
     max-width: 1024px;
+    padding-right: 4rem;
+    padding-left: 4rem;
   }
 }
 
@@ -851,6 +866,8 @@ https://flickity.metafizzy.co
 
   .container {
     max-width: 1280px;
+    padding-right: 5rem;
+    padding-left: 5rem;
   }
 }
 
@@ -858,6 +875,40 @@ https://flickity.metafizzy.co
 
   .container {
     max-width: 1536px;
+    padding-right: 6rem;
+    padding-left: 6rem;
+  }
+}
+
+@media (min-width: 1600px) {
+
+  .container {
+    max-width: 1600px;
+    padding-right: 8rem;
+    padding-left: 8rem;
+  }
+}
+
+@media (min-width: 1920px) {
+
+  .container {
+    max-width: 1920px;
+    padding-right: 10rem;
+    padding-left: 10rem;
+  }
+}
+
+@media (min-width: 2240px) {
+
+  .container {
+    max-width: 2240px;
+  }
+}
+
+@media (min-width: 2560px) {
+
+  .container {
+    max-width: 2560px;
   }
 }
 
@@ -911,6 +962,34 @@ https://flickity.metafizzy.co
   }
 }
 
+@media (min-width: 1600px) {
+
+  .debug-screens::before {
+    content: 'screen: 3xl';
+  }
+}
+
+@media (min-width: 1920px) {
+
+  .debug-screens::before {
+    content: 'screen: 4xl';
+  }
+}
+
+@media (min-width: 2240px) {
+
+  .debug-screens::before {
+    content: 'screen: 5xl';
+  }
+}
+
+@media (min-width: 2560px) {
+
+  .debug-screens::before {
+    content: 'screen: 6xl';
+  }
+}
+
 .fixed {
   position: fixed;
 }
@@ -923,24 +1002,8 @@ https://flickity.metafizzy.co
   position: relative;
 }
 
-.-top-\[5\.5rem\] {
-  top: -5.5rem;
-}
-
-.left-\[-10\.5rem\] {
-  left: -10.5rem;
-}
-
-.top-0 {
-  top: 0px;
-}
-
-.right-0 {
-  right: 0px;
-}
-
-.-top-10 {
-  top: -2.5rem;
+.-top-\[3\.5rem\] {
+  top: -3.5rem;
 }
 
 .left-\[-7\.5rem\] {
@@ -951,8 +1014,28 @@ https://flickity.metafizzy.co
   top: 2.5rem;
 }
 
+.left-14 {
+  left: 3.5rem;
+}
+
+.top-14 {
+  top: 3.5rem;
+}
+
+.right-10 {
+  right: 2.5rem;
+}
+
+.-top-10 {
+  top: -2.5rem;
+}
+
 .left-0 {
   left: 0px;
+}
+
+.top-0 {
+  top: 0px;
 }
 
 .bottom-\[-12rem\] {
@@ -999,6 +1082,14 @@ https://flickity.metafizzy.co
   top: 103px;
 }
 
+.right-0 {
+  right: 0px;
+}
+
+.z-\[1001\] {
+  z-index: 1001;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -1026,6 +1117,10 @@ https://flickity.metafizzy.co
 
 .ml-2 {
   margin-left: 0.5rem;
+}
+
+.mt-navLogo {
+  margin-top: 0.6rem;
 }
 
 .mr-3 {
@@ -1098,6 +1193,10 @@ https://flickity.metafizzy.co
 
 .w-16 {
   width: 4rem;
+}
+
+.w-5\/12 {
+  width: 41.666667%;
 }
 
 .max-w-full {
@@ -1333,21 +1432,8 @@ https://flickity.metafizzy.co
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(15 186 169 / 0));
 }
 
-.via-lime {
-  --tw-gradient-stops: var(--tw-gradient-from), #03FC96, var(--tw-gradient-to, rgb(3 252 150 / 0));
-}
-
 .to-lime {
   --tw-gradient-to: #03FC96;
-}
-
-.to-dark-lime {
-  --tw-gradient-to: #0FBAA9;
-}
-
-.bg-clip-text {
-  -webkit-background-clip: text;
-          background-clip: text;
 }
 
 .fill-current {
@@ -1357,6 +1443,10 @@ https://flickity.metafizzy.co
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.p-6 {
+  padding: 1.5rem;
 }
 
 .p-24 {
@@ -1369,6 +1459,11 @@ https://flickity.metafizzy.co
 
 .p-1 {
   padding: 0.25rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .px-6 {
@@ -1415,6 +1510,10 @@ https://flickity.metafizzy.co
   padding-bottom: 1rem;
 }
 
+.pb-10 {
+  padding-bottom: 2.5rem;
+}
+
 .pt-\[2\.5rem\] {
   padding-top: 2.5rem;
 }
@@ -1449,6 +1548,14 @@ https://flickity.metafizzy.co
 
 .pl-3 {
   padding-left: 0.75rem;
+}
+
+.pt-8 {
+  padding-top: 2rem;
+}
+
+.pb-0 {
+  padding-bottom: 0px;
 }
 
 .align-middle {
@@ -1486,11 +1593,6 @@ https://flickity.metafizzy.co
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
-}
-
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
 }
 
 .text-lg {
@@ -1534,12 +1636,13 @@ https://flickity.metafizzy.co
   color: rgb(3 252 150 / var(--tw-text-opacity));
 }
 
-.opacity-75 {
-  opacity: 0.75;
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
-.bg-blend-color {
-  background-blend-mode: color;
+.opacity-75 {
+  opacity: 0.75;
 }
 
 .shadow-2xl {
@@ -1553,6 +1656,15 @@ https://flickity.metafizzy.co
   --tw-shadow: var(--tw-shadow-colored);
 }
 
+.invert {
+  --tw-invert: invert(100%);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.filter {
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
 .transition {
   transition-property: color, background-color, border-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
@@ -1563,14 +1675,6 @@ https://flickity.metafizzy.co
 
 .transition-transform {
   transition-property: transform;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
-.transition-colors {
-  transition-property: color, background-color, border-color, fill, stroke, -webkit-text-decoration-color;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, -webkit-text-decoration-color;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
@@ -1682,10 +1786,6 @@ https://flickity.metafizzy.co
 .hover\:-translate-y-2:hover {
   --tw-translate-y: -0.5rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:text-transparent:hover {
-  color: transparent;
 }
 
 .hover\:text-lime:hover {
@@ -1973,10 +2073,6 @@ https://flickity.metafizzy.co
     margin-bottom: calc(0px * var(--tw-space-y-reverse));
   }
 
-  .lg\:p-12 {
-    padding: 3rem;
-  }
-
   .lg\:px-24 {
     padding-left: 6rem;
     padding-right: 6rem;
@@ -2029,11 +2125,6 @@ https://flickity.metafizzy.co
 
   .xl\:w-\[80\%\] {
     width: 80%;
-  }
-
-  .xl\:-translate-x-10 {
-    --tw-translate-x: -2.5rem;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
   .xl\:translate-x-\[13\.5rem\] {
@@ -2125,11 +2216,6 @@ https://flickity.metafizzy.co
     width: 83.333333%;
   }
 
-  .\32xl\:translate-x-0 {
-    --tw-translate-x: 0px;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
   .\32xl\:translate-x-\[-5\.8rem\] {
     --tw-translate-x: -5.8rem;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -2202,6 +2288,29 @@ https://flickity.metafizzy.co
 
   .\32xl\:pl-56 {
     padding-left: 14rem;
+  }
+}
+
+@media (min-width: 1920px) {
+
+  .\34xl\:w-8\/12 {
+    width: 66.666667%;
+  }
+
+  .\34xl\:pl-12 {
+    padding-left: 3rem;
+  }
+
+  .\34xl\:pr-40 {
+    padding-right: 10rem;
+  }
+
+  .\34xl\:pt-14 {
+    padding-top: 3.5rem;
+  }
+
+  .\34xl\:pb-14 {
+    padding-bottom: 3.5rem;
   }
 }
 
