Adding Screen Sizes
Getting the Home Link align and just black

Adding a Animated Count up Function

Making 4xl Screen layout match XD file for Home Page

4xl Screen Sizes completed

--- a/resources/views/home.antlers.html
+++ b/resources/views/home.antlers.html
@@ -4,11 +4,10 @@
 {{ partial:layouts/cta/chat}}
 {{ /if }}
 
-{{ if show_topleft }}
-<img id="hero-tri"
-     class="absolute hidden lg:block -top-[3.5rem] left-[-7.5rem] transform-gpu  z-[1001]"
-     src="/assets/imgs/quarter-jagged.svg" alt="">
-{{ /if }}
+<!--{{ svg src="quarter-jagged" id="hero-tri"-->
+<!--class="absolute hidden lg:block -top-[3.5rem] left-[-7.5rem] transform-gpu  z-[1001]" }}-->
+<img src="/assets/imgs/quarter-jagged.svg" class="absolute hidden lg:block -top-[3.5rem] left-[-7.5rem] transform-gpu  z-[1001]" alt="">
+
 
 <!-- Mission -->
 <div class="bg-dark text-white panel-size ">
