--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -1030,12 +1030,16 @@ https://flickity.metafizzy.co
   top: -2.5rem;
 }
 
-.left-0 {
-  left: 0px;
+.-left-4 {
+  left: -1rem;
 }
 
 .top-0 {
   top: 0px;
+}
+
+.left-0 {
+  left: 0px;
 }
 
 .bottom-\[-12rem\] {
@@ -1066,6 +1070,14 @@ https://flickity.metafizzy.co
   bottom: 1rem;
 }
 
+.top-\[-10rem\] {
+  top: -10rem;
+}
+
+.left-\[-10rem\] {
+  left: -10rem;
+}
+
 .-bottom-\[55rem\] {
   bottom: -55rem;
 }
@@ -1084,6 +1096,14 @@ https://flickity.metafizzy.co
 
 .right-0 {
   right: 0px;
+}
+
+.top-1 {
+  top: 0.25rem;
+}
+
+.right-1 {
+  right: 0.25rem;
 }
 
 .z-\[1001\] {
@@ -1110,6 +1130,10 @@ https://flickity.metafizzy.co
   grid-column: span 2 / span 2;
 }
 
+.-m-16 {
+  margin: -4rem;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -1125,6 +1149,10 @@ https://flickity.metafizzy.co
 
 .mr-3 {
   margin-right: 0.75rem;
+}
+
+.-mr-16 {
+  margin-right: -4rem;
 }
 
 .block {
@@ -1149,6 +1177,10 @@ https://flickity.metafizzy.co
 
 .h-screen {
   height: 100vh;
+}
+
+.h-halfScreen {
+  height: 50vh;
 }
 
 .h-hero {
@@ -1179,42 +1211,33 @@ https://flickity.metafizzy.co
   width: 100%;
 }
 
-.w-10\/12 {
-  width: 83.333333%;
-}
-
-.w-\[22rem\] {
-  width: 22rem;
-}
-
 .w-40 {
   width: 10rem;
+}
+
+.w-10\/12 {
+  width: 83.333333%;
 }
 
 .w-16 {
   width: 4rem;
 }
 
-.w-5\/12 {
-  width: 41.666667%;
+.w-6\/12 {
+  width: 50%;
 }
 
 .max-w-full {
   max-width: 100%;
 }
 
-.translate-x-\[-4\.8rem\] {
-  --tw-translate-x: -4.8rem;
+.translate-x-\[-9rem\] {
+  --tw-translate-x: -9rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.translate-x-\[6\.5rem\] {
-  --tw-translate-x: 6.5rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-y-\[11\.5rem\] {
-  --tw-translate-y: 11.5rem;
+.translate-y-\[-7rem\] {
+  --tw-translate-y: -7rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1307,12 +1330,12 @@ https://flickity.metafizzy.co
   flex-direction: column-reverse;
 }
 
-.items-start {
-  align-items: flex-start;
-}
-
 .items-center {
   align-items: center;
+}
+
+.justify-end {
+  justify-content: flex-end;
 }
 
 .justify-center {
@@ -1345,6 +1368,12 @@ https://flickity.metafizzy.co
   --tw-space-y-reverse: 0;
   margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+}
+
+.space-x-8 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(2rem * var(--tw-space-x-reverse));
+  margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .overflow-hidden {
@@ -1419,6 +1448,11 @@ https://flickity.metafizzy.co
   background-color: transparent;
 }
 
+.bg-indigo-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(224 231 255 / var(--tw-bg-opacity));
+}
+
 .bg-opacity-20 {
   --tw-bg-opacity: 0.2;
 }
@@ -1443,6 +1477,11 @@ https://flickity.metafizzy.co
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.object-top {
+  -o-object-position: top;
+     object-position: top;
 }
 
 .p-6 {
@@ -1506,10 +1545,6 @@ https://flickity.metafizzy.co
   padding-bottom: 3rem;
 }
 
-.pb-4 {
-  padding-bottom: 1rem;
-}
-
 .pb-10 {
   padding-bottom: 2.5rem;
 }
@@ -1554,8 +1589,12 @@ https://flickity.metafizzy.co
   padding-top: 2rem;
 }
 
-.pb-0 {
-  padding-bottom: 0px;
+.pb-5 {
+  padding-bottom: 1.25rem;
+}
+
+.pr-24 {
+  padding-right: 6rem;
 }
 
 .align-middle {
@@ -1600,6 +1639,15 @@ https://flickity.metafizzy.co
   line-height: 1.75rem;
 }
 
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.font-bold {
+  font-weight: 700;
+}
+
 .uppercase {
   text-transform: uppercase;
 }
@@ -1639,6 +1687,11 @@ https://flickity.metafizzy.co
 .text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.text-red-400 {
+  --tw-text-opacity: 1;
+  color: rgb(248 113 113 / var(--tw-text-opacity));
 }
 
 .opacity-75 {
@@ -1783,6 +1836,10 @@ https://flickity.metafizzy.co
     right: 0;
 }
 
+.even\:pl-5:nth-child(even) {
+  padding-left: 1.25rem;
+}
+
 .hover\:-translate-y-2:hover {
   --tw-translate-y: -0.5rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1794,29 +1851,6 @@ https://flickity.metafizzy.co
 }
 
 @media (min-width: 640px) {
-
-  .sm\:w-8\/12 {
-    width: 66.666667%;
-  }
-
-  .sm\:w-\[26rem\] {
-    width: 26rem;
-  }
-
-  .sm\:translate-x-\[-2\.8rem\] {
-    --tw-translate-x: -2.8rem;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .sm\:translate-x-\[11\.5rem\] {
-    --tw-translate-x: 11.5rem;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .sm\:translate-y-\[14\.5rem\] {
-    --tw-translate-y: 14.5rem;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
 
   .sm\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -1858,31 +1892,12 @@ https://flickity.metafizzy.co
     display: grid;
   }
 
-  .md\:w-\[32rem\] {
-    width: 32rem;
-  }
-
   .md\:w-1\/4 {
     width: 25%;
   }
 
-  .md\:translate-x-\[16\.5rem\] {
-    --tw-translate-x: 16.5rem;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .md\:translate-y-\[22\.5rem\] {
-    --tw-translate-y: 22.5rem;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
   .md\:translate-x-\[5rem\] {
     --tw-translate-x: 5rem;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .md\:translate-y-\[-3\.3rem\] {
-    --tw-translate-y: -3.3rem;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
@@ -1954,10 +1969,6 @@ https://flickity.metafizzy.co
     height: 67%;
   }
 
-  .lg\:w-10\/12 {
-    width: 83.333333%;
-  }
-
   .lg\:w-\[90\%\] {
     width: 90%;
   }
@@ -1973,36 +1984,6 @@ https://flickity.metafizzy.co
 
   .lg\:translate-y-\[-3\.8rem\] {
     --tw-translate-y: -3.8rem;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .lg\:translate-y-\[-10\.5rem\] {
-    --tw-translate-y: -10.5rem;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .lg\:translate-x-\[-1rem\] {
-    --tw-translate-x: -1rem;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .lg\:translate-x-\[-6\.8rem\] {
-    --tw-translate-x: -6.8rem;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .lg\:translate-x-\[-9\.8rem\] {
-    --tw-translate-x: -9.8rem;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .lg\:translate-x-\[12\.5rem\] {
-    --tw-translate-x: 12.5rem;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .lg\:translate-y-\[20\.5rem\] {
-    --tw-translate-y: 20.5rem;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
@@ -2115,26 +2096,8 @@ https://flickity.metafizzy.co
     margin-right: 0px;
   }
 
-  .xl\:w-\[37rem\] {
-    width: 37rem;
-  }
-
-  .xl\:w-\[14rem\] {
-    width: 14rem;
-  }
-
   .xl\:w-\[80\%\] {
     width: 80%;
-  }
-
-  .xl\:translate-x-\[13\.5rem\] {
-    --tw-translate-x: 13.5rem;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .xl\:translate-y-\[28\.5rem\] {
-    --tw-translate-y: 28.5rem;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
   @-webkit-keyframes xlTriSlide {
@@ -2200,14 +2163,6 @@ https://flickity.metafizzy.co
 
 @media (min-width: 1536px) {
 
-  .\32xl\:w-\[46rem\] {
-    width: 46rem;
-  }
-
-  .\32xl\:w-\[17rem\] {
-    width: 17rem;
-  }
-
   .\32xl\:w-\[60\%\] {
     width: 60%;
   }
@@ -2223,21 +2178,6 @@ https://flickity.metafizzy.co
 
   .\32xl\:translate-y-\[-1\.8rem\] {
     --tw-translate-y: -1.8rem;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .\32xl\:translate-y-\[-3\.5rem\] {
-    --tw-translate-y: -3.5rem;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .\32xl\:translate-x-\[16\.5rem\] {
-    --tw-translate-x: 16.5rem;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .\32xl\:translate-y-\[31\.5rem\] {
-    --tw-translate-y: 31.5rem;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
@@ -2277,11 +2217,6 @@ https://flickity.metafizzy.co
     padding-right: 12rem;
   }
 
-  .\32xl\:py-24 {
-    padding-top: 6rem;
-    padding-bottom: 6rem;
-  }
-
   .\32xl\:pl-24 {
     padding-left: 6rem;
   }
@@ -2293,8 +2228,87 @@ https://flickity.metafizzy.co
 
 @media (min-width: 1920px) {
 
+  .\34xl\:right-\[12\.8rem\] {
+    right: 12.8rem;
+  }
+
+  .\34xl\:top-\[13\.8rem\] {
+    top: 13.8rem;
+  }
+
+  .\34xl\:right-\[-12\.8rem\] {
+    right: -12.8rem;
+  }
+
+  .\34xl\:top-\[-13\.8rem\] {
+    top: -13.8rem;
+  }
+
+  .\34xl\:right-\[-12rem\] {
+    right: -12rem;
+  }
+
+  .\34xl\:top-0 {
+    top: 0px;
+  }
+
   .\34xl\:w-8\/12 {
     width: 66.666667%;
+  }
+
+  .\34xl\:translate-x-4 {
+    --tw-translate-x: 1rem;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .\34xl\:translate-x-6 {
+    --tw-translate-x: 1.5rem;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .\34xl\:translate-y-5 {
+    --tw-translate-y: 1.25rem;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .\34xl\:translate-x-\[10\.5rem\] {
+    --tw-translate-x: 10.5rem;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .\34xl\:translate-y-\[28rem\] {
+    --tw-translate-y: 28rem;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .\34xl\:py-24 {
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+  }
+
+  .\34xl\:px-48 {
+    padding-left: 12rem;
+    padding-right: 12rem;
+  }
+
+  .\34xl\:py-10 {
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
+  }
+
+  .\34xl\:py-12 {
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+  }
+
+  .\34xl\:px-10 {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
+
+  .\34xl\:px-24 {
+    padding-left: 6rem;
+    padding-right: 6rem;
   }
 
   .\34xl\:pl-12 {
@@ -2311,6 +2325,26 @@ https://flickity.metafizzy.co
 
   .\34xl\:pb-14 {
     padding-bottom: 3.5rem;
+  }
+
+  .\34xl\:pl-48 {
+    padding-left: 12rem;
+  }
+
+  .\34xl\:pr-28 {
+    padding-right: 7rem;
+  }
+
+  .\34xl\:pt-12 {
+    padding-top: 3rem;
+  }
+
+  .\34xl\:pb-0 {
+    padding-bottom: 0px;
+  }
+
+  .\34xl\:pb-10 {
+    padding-bottom: 2.5rem;
   }
 }
 
