--- a/resources/views/layouts/navigation/_main_nav.antlers.html
+++ b/resources/views/layouts/navigation/_main_nav.antlers.html
@@ -1,10 +1,10 @@
 <nav x-data="{ navOpen: false }" @keydown.escape="navOpen = false"
-     class="h-navbar flex justify-between items-center text-dark px-6 lg:px-24 text-4xl z-100 {{ !green_navbar ? 'bg-white' : 'bg-gradient-to-r from-dark-lime to-lime' }} w-full relative">
-    <a id="homelink" href="/" class="flex items-center lg:pl-24"><span
+     class="h-navbar flex justify-between items-center text-dark px-6 4xl:px-24  text-4xl z-100 {{ !green_navbar ? 'bg-white' : 'bg-lime' }} w-full relative">
+    <a id="homelink" href="/" class="flex items-center lg:pl-24 "><span
         class="text-black">confluence </span><span><img
         class="h-8 pl-3 mt-navLogo" src="{{ !green_navbar ? '/assets/logos/company_logo.svg' : '/assets/logos/black_tick.svg' }}"
         alt=""></span></a>
-    <div>
+    <div class="-mr-16">
         <button
                 @click="navOpen = !navOpen"
                  type="button"
